welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:4: error: type mismatch;
 found   : Unit
 required: Boolean
	bool =true}
             ^in1020:6: error: type mismatch;
 found   : Unit
 required: Boolean
		bool=false
                    ^